Fix spacing issue

--- a/src/App.css
+++ b/src/App.css
@@ -89,12 +89,6 @@ h1, h2, h3, h4 {
   .social-icons {
     margin-top: 1rem;
   }
-  .projects {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-    justify-content: space-evenly;
-    padding: 1rem !important;
-  }
 }
 
 .stat-images {
@@ -143,18 +137,31 @@ h1, h2, h3, h4 {
 
 .projects {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-  justify-content: space-evenly;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); 
+  justify-content: center; 
+  align-items: center;
+  gap: 20px; 
   padding: 1rem;
-  padding-left: 3rem;
+}
+
+@media (max-width: 768px) {
+  .projects {
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); 
+    justify-content: center;
+    padding: 0rem 1rem !important; 
+  }
+  .project-item{
+    max-width: 250px !important;
+  }
 }
 
 .project-item {
   background-color: rgba(255, 255, 255, 0.1);
   border-radius: 12px;
   padding: 1rem;
-  width: 250px;
-  height: 250px;
+  width: 100%;
+  max-width: 300px;
+  height: auto;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
   color: white;
   text-decoration: none;
@@ -167,14 +174,15 @@ h1, h2, h3, h4 {
   overflow: hidden;
 }
 
-.css-cveggr-MuiListItemIcon-root {
-  min-width: 0px !important;
-}
-
 .project-item:hover {
   transform: scale(1.05);
   box-shadow: 0 6px 40px rgba(0, 0, 0, 0.7);
 }
+
+.css-cveggr-MuiListItemIcon-root {
+  min-width: 0px !important;
+}
+
 
 .project-item.disabled {
   opacity: 0.5;
